--- a/index.html
+++ b/index.html
@@ -90,6 +90,24 @@
                 </h5>
                     <i class="bi playListPlay bi-play-circle-fill" id="8"></i>
             </li>
+            <li class="songItem">
+                <span>09</span>
+                <img src="img/1.jpg" alt="Alan">
+                <h5>
+                    On My Way
+                    <div class="subtitle">Alan Walker</div>
+                </h5>
+                    <i class="bi playListPlay bi-play-circle-fill" id="9"></i>
+            </li>
+            <li class="songItem">
+                <span>10</span>
+                <img src="img/1.jpg" alt="Alan">
+                <h5>
+                    On My Way
+                    <div class="subtitle">Alan Walker</div>
+                </h5>
+                    <i class="bi playListPlay bi-play-circle-fill" id="101"></i>
+            </li>
         </div>
     </div>
 
@@ -123,16 +141,7 @@
                 </div>
             </div>
             <div class="pop_song">
-                <li class="songItem">
-                    <div class="img_play">
-                        <img src="img/1.jpg" alt="alan">
-                        <i class="bi playListPlay bi-play-circle-fill" id="9"></i>
-                    </div>
-                    <h5>On My Way
-                        <br>
-                        <div class="subtitle">Alan Walker</div>
-                    </h5>
-                </li>
+                
                 <li class="songItem">
                     <div class="img_play">
                         <img src="img/1.jpg" alt="alan">
@@ -216,8 +225,8 @@
             <div class="wave1"></div>
         </div>
         <img src="img/26th.jpg" alt="Alan" id="poster_master_play">
-        <h5 id="title">Vande Mataram<br>
-            <div class="subtitle">Bankim Chandra</div>
+        <h5 id="title">Behind the Mask<br>
+            <div class="subtitle">Michael Jackson</div>
         </h5>
         <div class="icon">
             <i class="bi bi-skip-start-fill" id="back"></i>
